Added Comments and Organized Code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="keywords" content="Sandy Liu" />
 	<meta name="author" content="Sandy Liu" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+	 crossorigin="anonymous">
 	<link href="css/style.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700'
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-	<!--Header and Navigation-->
+	<!--Start of Header and Navigation-->
 	<div id="header">
 		<div class="name">
 			<h1 class="animated-name"><a href="#">Sandy Liu</h1>
@@ -30,33 +31,38 @@
 			</ul>
 		</div>
 	</div>
-
+	<!--End of Header and Navigation-->
 	<div class="spacer">
 		&nbsp;
 	</div>
-
+	<!--Start of Social Media and Email-->
 	<div class="social">
 		<div>
 			<ul class="social-list">
 				<li class="social-item"><a href="https://github.com/NotSandy" target="_blank"><i class='fab fa-github' style='font-size:36px'></i></a>
-				<li class="social-item"><a href="https://www.linkedin.com/in/notsandy/" target="_blank"><i class='fab fa-linkedin' style='font-size:36px'></i></a>
+				<li class="social-item"><a href="https://www.linkedin.com/in/notsandy/" target="_blank"><i class='fab fa-linkedin'
+						 style='font-size:36px'></i></a>
 			</ul>
 			<div class="line"></div>
 		</div>
 	</div>
-
 	<div class="email"></div>
-
+	<!--End of Social Media and Email-->
+	<!--Start of Main Content-->
 	<main>
+		<!--Start of About-->
 		<section id="about">
+			<!--Start of Info-->
 			<div class="info">
 				<h1>Hey there! My name is</h1>
 				<h2>SANDY LIU</h2>
 				<h3>I'm a sophomore pursuing a Computer Science degree at <a target="_blank" href="http://www.buffalo.edu/">University
 						at Buffalo</a>. Future Software Engineer who has
 					started expanding his skills and knowledge through courses, projects and collaborations.</h3>
-					<form><button formaction="mailto:sliu55@buffalo.edu">Get In Touch</button></form>
+				<form><button formaction="mailto:sliu55@buffalo.edu">Get In Touch</button></form>
 			</div>
+			<!--End of Info-->
+			<!--Start of Console-->
 			<div class="console">
 				<div class="console-info">
 					<h1>String location() {</h1>
@@ -89,16 +95,17 @@
 					<h1>}</h1>
 				</div>
 			</div>
+			<!--End of Console-->
 		</section>
-
+		<!--End of About-->
+		<!--Start of Resume-->
 		<section id="resume">
 			<div class="resume-holder">
 				<h1 class="title">Résumé</h1>
-
+				<!--Start of Education-->
 				<p class="education">
-
 					<h2 class="section">Education</h2>
-
+					<!--Start of UB-->
 					<a target="_blank" href="http://www.buffalo.edu/"><img class="icon" src="img/ub.png"></a>
 					<b class="topic">University at Buffalo</b><span class="right"><i class="time">2017 - Present</i></span>
 					<br>
@@ -112,10 +119,10 @@
 						<li>Discrete Structures</li>
 						<li>Data Structures</li>
 					</ul>
-
+					<!--End of UB-->
 					<br>
 					<br>
-
+					<!--Start of Baruch-->
 					<a target="_blank" href="http://www.baruch.cuny.edu/"><img class="icon" src="img/baruch.jpg"></a>
 					<b class="topic">CUNY Baruch College</b><span class="right"><i class="time">Fall 2016</i></span>
 					<br>
@@ -124,13 +131,15 @@
 					<br>
 					<p class="summary">Enrolled into the College Now Program where I was able to take college level courses in
 						highschool for credit.</p>
+					<!--End of Baruch-->
 				</p>
-
+				<!--End of Education-->
 				<br>
 				<br>
-
+				<!--Start of Work Experience-->
 				<p class="work">
 					<h2 class="section">Work Experience</h2>
+					<!--Start of Crossroad Culinary Center-->
 					<a target="_blank" href="https://myubcard.com/dining"><img class="icon" src="img/ccc.png"></a>
 					<b class="topic">Crossroad Culinary Center</b><span class="right"><i class="time">Fall 2017</i></span>
 					<br>
@@ -138,10 +147,10 @@
 					<br>
 					<br>
 					<p class="summary">During my first year in college, I worked at campus dining for one semester.</p>
-
+					<!--End of Crossroad Culinary Center-->
 					<br>
 					<br>
-
+					<!--Start of BCCHS-->
 					<a target="_blank" href="https://www.bcchsnyc.net/"><img class="icon" src="img/bcchs.png"></a>
 					<b class="topic">Baruch College Campus High School</b><span class="right"><i class="time">2016 - 2017</i></span>
 					<br>
@@ -151,10 +160,10 @@
 					<p class="summary">During senior year of high school I was lucky enough to be offered a tech internship from the
 						school. Here, I solved many technical issues that the school had including fixing printers, smartboards, rewiring
 						old LAN cables, etc.</p>
-
+					<!--End of BCCHS-->
 					<br>
 					<br>
-
+					<!--Start of CPC-->
 					<a target="_blank" href="https://www.cpc-nyc.org/"><img class="icon" src="img/cpc.gif"></a>
 					<b class="topic">Chinese American Planning Council</b><span class="right"><i class="time">Summer 2014</i></span>
 					<br>
@@ -163,12 +172,14 @@
 					<br>
 					<p class="summary">I was offered a job as office assistant over Summer where I helped organize data within
 						the company using excel.</p>
+					<!--End of CPC-->
 				</p>
-
+				<!--End of Work Experience-->
 			</div>
 		</section>
+		<!--End of Resume-->
 	</main>
-
+	<!--End of Main Content-->
 </body>
 
 </html>
